@@ -1,3 +1,8 @@
+2012-06-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Improve destructive and.
+
 2012-06-16 Leland Morrison <enigmalee AT sourceforge.net>
 
 	* sdas/asz80/z80mch.c: Change to report error for invalid operands
